--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,13 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
- 
+
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
-        run: npm test
+      - name: Run specific test file
+        # Directly point to your test file
+        run: npx jest app.test.js
 
       - name: Build application
         run: npm run build || echo "No build step"
