--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run specific test file
         # Directly point to your test file
-        run: npx jest app.test.js
+        run: npx jest src/app.test.js
 
       - name: Build application
         run: npm run build || echo "No build step"
