--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,29 @@ jobs:
 
       - name: Build application
         run: npm run build || echo "No build step"
+
+        -name: Build docker image
+        uses:  actions/build-push-actions@v2
+        with: 
+          context:
+          dockerfile: Dockerfile
+          push: false
+          tags: ${{secrets.docker_username}}/CI-CD-assignment:latest
+        -name: Login  to Docker Hub
+        uses: docker/Login-actions@v1
+        with:
+          username: ${{secrets.docker_username}}
+          password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
+
+        -name: Push to Docker Hub
+        uses: actions/build-push-action@v2
+        with: 
+          context:
+          dockerfile: Dockerfile
+          push: true
+          tags: ${{secrets.docker_username}}/CI-CD-assignment:latest
+        
+
+
+
+
