--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,34 +25,22 @@ jobs:
         run: npm ci
 
       - name: Run specific test file
-        # Directly point to your test file
         run: npx jest src/app.test.js
 
       - name: Build application
-        run: npm run build || echo "No build step"
+        run: npm run build
 
-      - name: Build docker image
-        uses:  docker/build-push-actions@v2
-        with: 
-          context:
-          dockerfile: Dockerfile
-          push: false
-          tags: ${{secrets.docker_username}}/CI-CD-assignment:latest
-      - name: Login  to Docker Hub
-        uses: docker/Login-actions@v1
+      # 🔐 Login FIRST before pushing
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          username: ${{secrets.docker_username}}
-          password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
-        with: 
-          context:
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
           dockerfile: Dockerfile
           push: true
-          tags: ${{secrets.docker_username}}/CI-CD-assignment:latest
-        
-
-
-
-
+          tags: ${{ secrets.DOCKER_USERNAME }}/ci-cd-assignment:latest
